# OpenGLThingy

./: .gitignore  ARCHITECTURE_SUPPORT.md  CMakeLists.txt  CUBE_IMPLEMENTATION.md  OpenGLThingy.sln  OpenGLThingy.vcxproj  OpenGLThingy.vcxproj.filters  README.md  build.bat  build.sh  imgui.ini  test-build-configs.sh
.claude/: settings.local.json
res/shaders/: Cube.shader  basic.shader
src/: Application.cpp  Application.h  Config.h  Cube.cpp  Cube.h  IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h  main.cpp  texture.cpp  texture.h
src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
